--- a/theme.css
+++ b/theme.css
@@ -26,13 +26,15 @@ html, body{
     margin: 0;
     padding-top: 60vh;
 }
-.heading {
+
+.text{
+    height: auto;
+    width: auto;
     color: #ffffff;
+    text-shadow: 0 0 10px #000;
     display: block;
     font-family: 'Caveat', cursive;
-    font-size: 6em;
-    font-weight: normal;
-    text-shadow: 0 0 10px #000;
+    font-size: 50px;
 }
 .heading-subtext{
     color: #fff;
@@ -67,7 +69,7 @@ html, body{
 }
 .section{
     margin: 0 auto;
-    max-width: 600px;
+    max-width: auto;
     padding: 1em 1em;
     background-image: url("bg.png");
   
@@ -107,10 +109,10 @@ html, body{
 }
 .raya{
     border-radius: 25px;
-    width:100%;
+    width:auto;
     margin:0px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-    height:630px;
+    height:auto;
     background-color: rgb(255, 250, 234);
     margin-top: 3em;
     padding-top: 4em;
@@ -152,7 +154,7 @@ html, body{
     cursor: pointer;
     margin-top: 3em;
     
-    width: 100%;
+    width: 70%;
     border-radius: 25px;
     font-weight: bold;
 
@@ -190,7 +192,7 @@ html, body{
     
   }
 
-overlay {
+.overlay {
     z-index: 9;
     margin: 30px;
     padding-top: 10em;
